--- a/.gitignore
+++ b/.gitignore
@@ -8,44 +8,8 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
-
-
-Skip to content
-This repository
-
-    Pull requests
-    Issues
-    Gist
-
-    @ryanlevell
-
-1,226
-26,506
-
-    9,698
-
 github/gitignore
-
 gitignore/Global/Eclipse.gitignore
-Stéphane Veyret on Apr 24 Add Java APT class path to Eclipse
-
-13 contributors
-@aroben
-@gAmUssA
-@fhemberger
-@lfborjas
-@leandrodeleite
-@harshadsabne
-@segfly
-@pangratz
-@defunkt
-@arinto
-@apetresc
-@Danimoth
-@Utumno
-40 lines (30 sloc) 0.458 kB
-*.pydevproject
-.metadata
 .gradle
 bin/
 tmp/
@@ -56,30 +20,13 @@ tmp/
 local.properties
 .settings/
 .loadpath
-
-# Eclipse Core
 .project
-
-# External tool builders
 .externalToolBuilders/
-
-# Locally stored "Eclipse launch configurations"
 *.launch
-
-# CDT-specific
 .cproject
-
-# JDT-specific (Eclipse Java Development Tools)
 .classpath
-
-# Java annotation processor (APT)
 .factorypath
-
-# PDT-specific
 .buildpath
-
-# sbteclipse plugin
 .target
-
-# TeXlipse plugin
 .texlipse
+test-output/
