Added system property support and defaults support for browsers and chrome path.

--- a/src/main/resources/adamant.properties
+++ b/src/main/resources/adamant.properties
@@ -1,5 +1,5 @@
 
 # browsers for drivers - comma separated
-browsers chrome, firefox
+browsers chrome
 
 chrome_path /Users/ryan/drivers/chromedriver
