--- a/pom.xml
+++ b/pom.xml
@@ -56,5 +56,10 @@
 			<artifactId>selenium-java</artifactId>
 			<version>2.47.1</version>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.12</version>
+		</dependency>
 	</dependencies>
 </project>
