Attempt to add capabilities support.

--- a/src/test/resources/adamant.properties
+++ b/src/test/resources/adamant.properties
@@ -1,3 +1,7 @@
 browsers chrome
 
 chrome_path /Users/ryan/drivers/chromedriver
+
+firefox.cap.acceptSslCerts false
+
+chrome.cap.acceptSslCerts false
