--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
 	<url>https://github.com/ryanlevell/adamant-driver</url>
 	<groupId>com.github.ryanlevell</groupId>
 	<artifactId>adamant-driver</artifactId>
-	<version>1.0.0</version>
+	<version>1.0.0-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<properties>
@@ -26,12 +26,23 @@
 	<developers>
 		<developer>
 			<name>Ryan</name>
-			<email>levellapps@gmail.com</email>
+			<email>ryanlevell@gmail.com</email>
 		</developer>
 	</developers>
 	<scm>
 		<url>https://github.com/ryanlevell/adamant-driver.git</url>
 	</scm>
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 
 	<build>
 		<plugins>
