--- a/pom.xml
+++ b/pom.xml
@@ -12,9 +12,9 @@
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<selenium.version>2.52.0</selenium.version>
-		<testng.version>6.9.6</testng.version>
-		<slf4j.version>1.7.12</slf4j.version>
+		<selenium.version>2.53.0</selenium.version>
+		<testng.version>6.9.10</testng.version>
+		<slf4j.version>1.7.21</slf4j.version>
 	</properties>
 
 	<licenses>
@@ -128,6 +128,12 @@
 			<groupId>org.slf4j</groupId>
 			<artifactId>slf4j-api</artifactId>
 			<version>${slf4j.version}</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-simple</artifactId>
+			<version>${slf4j.version}</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
