--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,10 @@
 		<selenium.version>2.53.0</selenium.version>
 		<testng.version>6.9.10</testng.version>
 		<slf4j.version>1.7.21</slf4j.version>
+		<maven-gpg.version>1.5</maven-gpg.version>
+		<maven-surefire.version>2.18.1</maven-surefire.version>
+		<maven-source.version>3.0.0</maven-source.version>
+		<maven-javadoc.version>2.10.3</maven-javadoc.version>
 	</properties>
 
 	<licenses>
@@ -49,7 +53,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-gpg-plugin</artifactId>
-				<version>1.5</version>
+				<version>${maven-gpg.version}</version>
 				<executions>
 					<execution>
 						<id>sign-artifacts</id>
@@ -63,7 +67,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.18.1</version>
+				<version>${maven-surefire.version}</version>
 				<configuration>
 					<suiteXmlFiles>
 						<suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
@@ -89,6 +93,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-source-plugin</artifactId>
+				<version>${maven-source.version}</version>
 				<executions>
 					<execution>
 						<id>attach-sources</id>
@@ -101,6 +106,7 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
+				<version>${maven-javadoc.version}</version>
 				<executions>
 					<execution>
 						<id>attach-javadocs</id>
